[package]
name = "named_tuple"
version = "0.1.1"
authors = ["Flier Lu <flier.lu@gmail.com>"]
license = "MIT/Apache-2.0"

description = "A macro for declaring a `struct` that manages a set of fields in a `tuple`."
readme = "README.md"
documentation = "https://docs.rs/named_tuple"
repository = "https://www.github.com/flier/named-tuple.rs"
keywords = ["tuple"]
categories = ["data-structures"]

edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "0.15"
quote = "0.6"
proc-macro2 = "0.4"

[badges]
travis-ci = { repository = "flier/named-tuple.rs" }
