[package]
name = "named_tuple"
version = "0.1.1"
authors = ["Flier Lu <flier.lu@gmail.com>"]
license = "MIT/Apache-2.0"

description = "A macro for declaring a `struct` that manages a set of fields in a `tuple`."
readme = "README.md"
documentation = "https://docs.rs/named_tuple"
repository = "https://www.github.com/flier/named-tuple.rs"
keywords = ["tuple"]
categories = ["data-structures"]

edition = "2018"

[lib]
proc-macro = true

[features]
default = []
dump = ["rustfmt-nightly", "term"]

[dependencies]
syn = { version = "0.15", features = ["fold"] }
quote = "0.6"
proc-macro2 = "0.4"
serde = { version = "1.0", optional = true }
rustfmt-nightly = { version = "1.0", optional = true }
term = { version = "0.5", optional = true }

[dev-dependencies]
serde_derive = "1.0"
serde_json = "1.0"

[badges]
travis-ci = { repository = "flier/named-tuple.rs" }
